--- a/frontend-v2/package.json
+++ b/frontend-v2/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.2",
     "prettier": "^3.5.0",
+    "shadcn": "^2.10.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
